# MiniVu

./: .gitignore  CONTEXT.md  LICENSE  README.md  README_EN.md  index.html  package-lock.json  package.json  vitest.config.ts
docs/: model-management.md  troubleshooting.md
scripts/: generate-app-icon.mjs  package-macos-release.sh
src/: App.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macos/: Info.plist
src-tauri/resources/llama/: libggml-base.0.dylib  libggml-blas.0.dylib  libggml-cpu.0.dylib  libggml-metal.0.dylib  libggml-rpc.0.dylib  libggml.0.dylib  libllama.0.dylib  libmtmd.0.dylib
src-tauri/scripts/: ocr.swift
src-tauri/src/: capture_store.rs  commands.rs  download_http.rs  export.rs  inference_backend.rs  inference_profile.rs  lib.rs  mirror_benchmark.rs  model_cache.rs  model_lifecycle.rs  ocr_macos.rs  platform_caps.rs  privacy.rs  runtime_installer.rs  screenshot.rs  settings.rs  shortcut.rs  tray.rs  window.rs  window_geometry.rs
src-tauri/src/environment/: mod.rs  status.rs
src-tauri/src/inference/: context.rs  health.rs  messages.rs  mod.rs  session.rs  stream.rs
src-tauri/src/inference/backends/: llama.rs  mlx.rs  mod.rs
src-tauri/src/model_download/: gguf.rs  mlx.rs  mod.rs  progress.rs  task.rs
src-tauri/src/model_sidecar/: mod.rs
src-tauri/src/setup/: mod.rs  orchestrator.rs
src-tauri/src/sidecar/: lifecycle.rs  mod.rs  process.rs
tests/: CaptureCanvas.test.tsx  ChatPanel.integration.test.tsx  ChatPanel.test.tsx  (+27 more)
(+75 files in other folders)
